--- a/sass/components/_mailing-footer.scss
+++ b/sass/components/_mailing-footer.scss
@@ -3,19 +3,18 @@
 .mailing-form {
   position: relative;
   padding: 12px 0 0 93px;
-}
+  & h3 {
+    margin: 0 0 20px;
 
-.mailing-form h3 {
-  margin: 0 0 20px;
-
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--primary-bg-color);
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--primary-bg-color);
+  }
 }
 
 .mailing-block {
