--- a/sass/layout/_futures-list.scss
+++ b/sass/layout/_futures-list.scss
@@ -1,33 +1,59 @@
 .futures-list {
   padding-top: 94px;
   padding-bottom: 94px;
+
+  & p {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  & h2 {
+    margin-top: 0;
+    margin-bottom: 10px;
+  }
+
+  & .item::before {
+    display: block;
+    height: 120px;
+    content: "";
+    background-color: #f5f4fa;
+    margin-bottom: 30px;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  & .icon-detales::before {
+    background-image: url("../images/antenna\ 1.svg");
+  }
+
+  & .icon-intime::before {
+    background-image: url("../images/clock\ 1.svg");
+  }
+
+  & .icon-plan::before {
+    background-image: url("../images/diagram\ 1.svg");
+  }
+
+  & .icon-tech::before {
+    background-image: url("../images/astronaut\ 1.svg");
+  }
 }
 
 .futures-flex {
   display: flex;
   flex-wrap: wrap;
   padding-left: 0;
-}
 
-.futures-flex .item {
-  display: flex;
-  flex-direction: column;
-  width: 270px;
-  margin-right: 30px;
-}
+  & .item {
+    display: flex;
+    flex-direction: column;
+    width: 270px;
+    margin-right: 30px;
+  }
 
-.futures-flex .item:nth-child(4n) {
-  margin-right: 0;
-}
-
-.futures-list p {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.futures-list h2 {
-  margin-top: 0;
-  margin-bottom: 10px;
+  & .item:nth-child(4n) {
+    margin-right: 0;
+  }
 }
 
 .futures-list-title {
@@ -38,32 +64,6 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--title-text-color);
-}
-
-.futures-list .item::before {
-  display: block;
-  height: 120px;
-  content: "";
-  background-color: #f5f4fa;
-  margin-bottom: 30px;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.futures-list .icon-detales::before {
-  background-image: url("../images/antenna\ 1.svg");
-}
-
-.futures-list .icon-intime::before {
-  background-image: url("../images/clock\ 1.svg");
-}
-
-.futures-list .icon-plan::before {
-  background-image: url("../images/diagram\ 1.svg");
-}
-
-.futures-list .icon-tech::before {
-  background-image: url("../images/astronaut\ 1.svg");
 }
 
 .futures-list-description {
