--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -22,53 +22,53 @@
   display: flex;
   margin-left: 93px;
   padding-left: 0;
-}
 
-.nav-list .item:not(:last-child) {
-  margin-right: 50px;
-}
+  & .item:not(:last-child) {
+    margin-right: 50px;
+  }
 
-/* Задаем падингом больше зону для ховер и фокус*/
-.nav-list a {
-  position: relative;
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
+  /* Задаем падингом больше зону для ховер и фокус*/
+  & a {
+    position: relative;
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
 
-.nav-list .active {
-  color: var(--accent-color);
-}
+  & .active {
+    color: var(--accent-color);
 
-.active::after {
-  content: " ";
+    &::after {
+      content: " ";
 
-  position: absolute;
-  left: 0;
-  bottom: 0;
+      position: absolute;
+      left: 0;
+      bottom: 0;
 
-  display: block;
-  width: 100%;
-  height: 4px;
-  background-color: var(--accent-color);
-  border-radius: 2px;
-}
+      display: block;
+      width: 100%;
+      height: 4px;
+      background-color: var(--accent-color);
+      border-radius: 2px;
+    }
+  }
 
-.nav-list a {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: var(--title-text-color);
-}
-.nav-list a:hover,
-.nav-list a:focus {
-  color: var(--accent-color);
+  & a {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: var(--title-text-color);
+  }
+  & a:hover,
+  & a:focus {
+    color: var(--accent-color);
 
-  transition-duration: 500ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 500ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
 .contact-us {
@@ -77,48 +77,48 @@
   margin-bottom: 0;
   padding-left: 0;
   margin-left: 305px;
-}
 
-/* Задаем падингом больше зону для ховер и фокус*/
-.contact-us a {
-  display: block;
-  padding-top: 31px;
-  padding-bottom: 31px;
-  color: var(--primary-text-color);
-}
+  /* Задаем падингом больше зону для ховер и фокус*/
+  & a {
+    display: block;
+    padding-top: 31px;
+    padding-bottom: 31px;
+    color: var(--primary-text-color);
+  }
 
-.contact-us .item:not(:last-child) {
-  margin-right: 30px;
-}
+  & .item:not(:last-child) {
+    margin-right: 30px;
+  }
 
-.contact-us a {
-  display: inline-flex;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: var(--primary-text-color);
-  align-items: center;
-}
-.contact-us a:hover,
-.contact-us a:focus {
-  color: var(--accent-color);
+  & a {
+    display: inline-flex;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: var(--primary-text-color);
+    align-items: center;
+  }
+  & a:hover,
+  & a:focus {
+    color: var(--accent-color);
 
-  transition-duration: 500ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 500ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  & a:hover .icon-letter,
+  & a:focus .icon-letter,
+  & a:hover .icon-smartphone,
+  & a:focus .icon-smartphone {
+    fill: currentColor;
+  }
 }
 
 .icon-letter,
 .icon-smartphone {
   margin-right: 10px;
   fill: var(--primary-text-color);
-}
-
-.contact-us a:hover .icon-letter,
-.contact-us a:focus .icon-letter,
-.contact-us a:hover .icon-smartphone,
-.contact-us a:focus .icon-smartphone {
-  fill: currentColor;
 }
