--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -10,37 +10,37 @@
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
-}
 
-.portfolio-section-list .item:not(:last-child) {
-  margin-right: 8px;
-}
+  & .item:not(:last-child) {
+    margin-right: 8px;
+  }
 
-.portfolio-section-list button {
-  background-color: #f5f4fa;
-  color: var(--title-text-color);
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.6;
-  letter-spacing: 0.03em;
-  border-color: transparent;
-  border-radius: 4px;
-  padding: 6px 22px;
-}
-.portfolio-section-list button:hover,
-.portfolio-section-list button:focus {
-  background-color: var(--accent-color);
-  color: var(--primary-bg-color);
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.6;
+  & button {
+    background-color: #f5f4fa;
+    color: var(--title-text-color);
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.6;
+    letter-spacing: 0.03em;
+    border-color: transparent;
+    border-radius: 4px;
+    padding: 6px 22px;
+  }
+  & button:hover,
+  & button:focus {
+    background-color: var(--accent-color);
+    color: var(--primary-bg-color);
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.6;
 
-  transition-duration: 500ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 500ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
 .portfolio-list {
@@ -48,19 +48,34 @@
   padding-right: 0;
   display: flex;
   flex-wrap: wrap;
-}
 
-.portfolio-list .item {
-  width: 370px;
-  margin-right: 30px;
-  margin-bottom: 30px;
-  display: block;
-  background: #ffffff;
-  border: 1px solid #eeeeee;
-}
+  & .item {
+    width: 370px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    display: block;
+    background: #ffffff;
+    border: 1px solid #eeeeee;
+  }
 
-.portfolio-list .item:nth-child(3n) {
-  margin-right: 0;
+  & .item:nth-child(3n) {
+    margin-right: 0;
+  }
+
+  & .item-title {
+    padding: 20px 24px;
+    width: 368px;
+  }
+
+  & h2 {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 36px;
+    letter-spacing: 0.06em;
+    color: var(--title-text-color);
+    margin: 0 0 8px 0;
+  }
 }
 
 .overlay-description {
@@ -96,46 +111,31 @@
   height: 294px;
 }
 
-.portfolio-link:hover .overlay,
-.portfolio-link:focus .overlay {
-  transform: translateY(0);
-  transition-duration: 500ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .portfolio-link {
   display: block;
   overflow: hidden;
   width: 100%;
   height: 100%;
-}
 
-.portfolio-link:hover,
-.portfolio-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.15);
-  transition-duration: 500ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
+  &:hover .overlay,
+  &:focus .overlay {
+    transform: translateY(0);
+    transition-duration: 500ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
 
-.portfolio-list .item-title {
-  padding: 20px 24px;
-  width: 368px;
-}
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.15);
+    transition-duration: 500ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
 
-.portfolio-link img {
-  width: 370px;
-  height: 294px;
-}
-
-.portfolio-list h2 {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 36px;
-  letter-spacing: 0.06em;
-  color: var(--title-text-color);
-  margin: 0 0 8px 0;
+  & img {
+    width: 370px;
+    height: 294px;
+  }
 }
 
 .portfolio-list-title {
